fix: preserve unknown kev membership through threat intel updates